fix taxonomy links in posts, refactor templates

--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/baseof.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/baseof.html
@@ -28,6 +28,13 @@
 
   </head>
   <body class="">
+    <div class="backgroundplaceholder0"></div>
+    <div class="backgroundplaceholder1"></div>
+    <div class="backgroundplaceholder2"></div>
+    <div class="backgroundplaceholder3"></div>
+    <div class="backgroundplaceholder4"></div>
+    <div class="backgroundplaceholder5"></div>
+    <div class="backgroundplaceholder6"></div>
     {{ block "body" . }}{{ end }}
     <div class="ga-script">{{ partial "generate_google_analytics.html" }}</div>
   </body>
