--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/baseof.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/baseof.html
@@ -4,20 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=1">
     <title>{{ block "title" . }}{{ .Title }}{{ end }}</title>
-    {{ if eq .URL "/" }}
-  {{ else }}<meta name="twitter:card" content="summary_large_image">
-
-    {{ if .Params.thumbnail }}
-    <meta name="twitter:image" content="{{ .Params.thumbnail }}">
-    {{ end }}
-
+    {{ block "extrahead" . }}{{ end -}}
 <meta name="description" content="{{ .Description }}">
 <meta name="generator" content="Lektor">
 <meta name="twitter:title" content="{{ .Title }}">
 <meta name="twitter:description" content="{{ .Description }}">
 <meta name="twitter:site" content="@jessejiryudavis">
 <meta name="twitter:creator" content="@jessejiryudavis">
-<meta name="twitter:domain" content="emptysqua.re">{{ end }}
+<meta name="twitter:domain" content="emptysqua.re">
 
 
     <link href="https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911" rel="stylesheet">
@@ -28,7 +22,6 @@
 
   </head>
   <body class="">
-    <div class="backgroundplaceholder0"></div>
     <div class="backgroundplaceholder1"></div>
     <div class="backgroundplaceholder2"></div>
     <div class="backgroundplaceholder3"></div>
