--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/single.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/single.html
@@ -1,3 +1,12 @@
+{{ define "extrahead" -}}
+  <meta name="twitter:card" content="summary_large_image">
+
+  {{ if .Params.thumbnail }}
+    <meta name="twitter:image" content="{{ .URL | absURL }}{{ replace .Params.thumbnail "@240" "" }}">
+  {{ end }}
+
+{{ end }}
+
 {{ define "body" }}
   <div class="container">
 
