homepage with recent and best articles

--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/tag_or_category.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/tag_or_category.html
@@ -6,10 +6,10 @@
 
 {{ partial "sidebar.html" . }}
     </header>
-
   <section>
+
   <header><h1 class="title page-title">Category: {{ .Title }}</h1></header>
-  {{ $paginator := .Paginate (where .Data.Pages "Type" "post") }}
+  {{- $paginator := .Paginate (where .Data.Pages "Type" "post") -}}
   <ul class="post-list">
     {{ range $paginator.Pages }}
       <li>{{ partial "blog_post_summary" . }}</li>
