fix "home" link

--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/single.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/single.html
@@ -10,8 +10,8 @@
 {{ define "body" }}
   <div class="container">
 
-    <header class="main-header"><a href="{{ .Site.BaseURL }}" class="logo"></a>
-      <h1><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
+    <header class="main-header"><a href="{{ .Site.BaseURL }}blog/" class="logo"></a>
+      <h1><a href="{{ .Site.BaseURL }}blog/">{{ .Site.Title }}</a>
       </h1>
 
 {{ partial "sidebar.html" . }}
