--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/sidebar.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/sidebar.html
@@ -4,7 +4,7 @@
       <li class="nav-item menu-nav-item"><a href="{{ .URL }}">{{ .Name }}</a>
       </li>{{ end }}
       <li class="nav-item nav-divider nav-divider-1">Categories:</li>{{ range $name, $taxonomy := index .Site.Taxonomies.category }}
-      <li class="nav-item category-nav-item"><a href="/blog/category/{{ $name }}" title="View all posts filed under {{ $name | title }}">{{ $name | title }}</a>
+      <li class="nav-item category-nav-item"><a href="{{ "category" | relURL }}/{{ $name }}/" title="View all posts filed under {{ $name | title }}">{{ $name | title }}</a>
       </li>{{ end }}
       <li class="nav-item nav-divider nav-divider-2">&nbsp;</li>
       <li class="nav-item search-item">
