--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/tag_or_category.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/tag_or_category.html
@@ -1,34 +1,40 @@
   <div class="container">
 
-    <header class="main-header"><a href="{{ .Site.BaseURL }}" class="logo"></a>
-      <h1><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
+    <header class="main-header"><a href="{{ .content.Site.BaseURL }}" class="logo"></a>
+      <h1><a href="{{ .content.Site.BaseURL }}">{{ .content.Site.Title }}</a>
       </h1>
 
-{{ partial "sidebar.html" . }}
+{{ partial "sidebar.html" .content }}
     </header>
   <section>
 
-  <header><h1 class="title page-title">Category: {{ .Title }}</h1></header>
-  {{- $paginator := .Paginate (where .Data.Pages "Type" "post") -}}
+  <header>
+    <h1 class="title page-title">
+      {{ with .taxonomy_type }}
+        {{ . }}:
+      {{ end }}
+      {{ .taxonomy_name }}
+    </h1>
+  </header>
   <ul class="post-list">
-    {{ range $paginator.Pages }}
+    {{ range .paginator.Pages }}
       <li>{{ partial "blog_post_summary" . }}</li>
     {{ end }}
   </ul>
-  {{ if or ($paginator.HasPrev) ($paginator.HasNext) }}
+  {{ if or (.paginator.HasPrev) (.paginator.HasNext) }}
   <nav class="nav-below nav-with-current">
     <div class="nav-previous">
-    {{ if $paginator.HasNext }}
-      <a href="{{ .URL | relURL }}page/{{ $paginator.Next.PageNumber }}"><span class="meta-nav">&larr;&nbsp;</span>Older</a>
+    {{ if .paginator.HasNext }}
+      <a href="{{ .URL | relURL }}page/{{ .paginator.Next.PageNumber }}"><span class="meta-nav">&larr;&nbsp;</span>Older</a>
     {{ end }}
     </div>
     <div class="nav-current">
-      Page {{ $paginator.PageNumber }}
+      Page {{ .paginator.PageNumber }}
     </div>
 
     <div class="nav-next">
-      {{ if $paginator.HasPrev }}
-        <a href="{{ .URL | relURL }}page/{{ $paginator.Prev.PageNumber }}">Newer<span class="meta-nav">&nbsp;&rarr;</span></a>
+      {{ if .paginator.HasPrev }}
+        <a href="{{ .content.URL | relURL }}page/{{ .paginator.Prev.PageNumber }}">Newer<span class="meta-nav">&nbsp;&rarr;</span></a>
       {{ end }}
     </div>
   </nav>
