--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/single.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/single.html
@@ -1,23 +1,18 @@
 {{ define "extrahead" -}}
-  <meta name="twitter:card" content="summary_large_image">
-
-  {{ if .Params.thumbnail }}
-    <meta name="twitter:image" content="{{ .URL | absURL }}{{ replace .Params.thumbnail "@240" "" }}">
-  {{ end }}
-
+<meta name="twitter:card" content="summary_large_image">
+{{ if .Params.thumbnail }}
+<meta name="twitter:image"
+      content="{{ .URL | absURL }}{{ replace .Params.thumbnail " @240" "" }}">
+{{ end }}
 {{ end }}
 
 {{ define "body" }}
-  <div class="container">
-
-    <header class="main-header"><a href="{{ .Site.BaseURL }}" class="logo"></a>
-      <h1><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
-      </h1>
-
-{{ partial "sidebar.html" . }}
-    </header>
-    <section>
-
+<div class="container">
+  <header class="main-header"><a href="{{ .Site.BaseURL }}" class="logo"></a>
+    <h1><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></h1>
+    {{ partial "sidebar.html" . }}
+  </header>
+  <section>
     <article class="{{ .Type }}">
       <header>
         {{ if eq .Type "post" }}
@@ -27,90 +22,89 @@
           </time>
           <span class="byline">
             <span class="sep">&nbsp;&mdash;&nbsp;</span>
-
-
-            <a href="https://twitter.com/{{ .Site.Params.TwitterHandle }}"><span class="author">{{ .Site.Params.Author }}</span></a>
-
+            <a href="https://twitter.com/{{ .Site.Params.TwitterHandle }}">
+              <span class="author">{{ .Site.Params.Author }}</span>
+            </a>
           </span>
         </div>
         {{ end }}
         <h1 class="title"><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
       </header>
-
       <div class="post-content">{{ .Content }}</div>
     </article>
-  <footer class="entry-meta">
-    {{ with (index .Params "category") }}
-      Categories:
-      {{ range $i, $elem := . -}}
-        {{ if $i }}, {{ end }}<a href="{{ "category" | relURL }}/{{ $elem | urlize }}/" title="All posts in {{ $elem }}">{{ $elem }}</a>
-      {{- end }}
-    {{ end }}
-    {{ with (index .Params "tag") }}
-      <br>
-      Tags:
-      {{ range $i, $elem := . }}
-        {{ if $i }}, {{ end }}<a href="{{ "tag" | relURL }}/{{ $elem | urlize }}/" title="All posts tagged {{ $elem }}">{{ $elem }}</a>
-      {{- end }}
-    {{ end }}
-  </footer>
-
-  {{ if eq .Type "post" }}
-  <nav class="nav-below">
-    <div class="nav-previous">
-      {{ if .Next }}
-        <a href="{{ .Next.Permalink }}"><span class="meta-nav">&larr;&nbsp;</span>{{ .Next.Title }}</a>
+    <footer class="entry-meta">
+      {{ with (index .Params "category") }}
+        Categories:
+        {{ range $i, $elem := . -}}
+          {{ if $i }}, {{ end }}<a href="{{ " category" | relURL }}/{{ $elem | urlize }}/" title="All posts in {{ $elem }}">{{ $elem }}</a>
+        {{- end }}
       {{ end }}
-    </div>
-    <div class="nav-next">
-      {{ if .Prev }}
+      {{ with (index .Params "tag") }}
+        <br>
+        Tags:
+        {{ range $i, $elem := . }}
+          {{ if $i }}, {{ end }}<a href="{{ " tag" | relURL }}/{{ $elem | urlize }}/" title="All posts tagged {{ $elem }}">{{ $elem }}</a>
+        {{- end }}
+      {{ end }}
+    </footer>
+
+    {{ if eq .Type "post" }}
+    <nav class="nav-below">
+      <div class="nav-previous">
+        {{ if .Next }}
+        <a href="{{ .Next.Permalink }}"><span
+          class="meta-nav">&larr;&nbsp;</span>{{ .Next.Title }}</a>
+        {{ end }}
+      </div>
+      <div class="nav-next">
+        {{ if .Prev }}
         <a href="{{ .Prev.Permalink }}">{{ .Prev.Title }}<span class="meta-nav">&nbsp;&rarr;</span></a>
-      {{ end }}
-    </div>
-  </nav>
+        {{ end }}
+      </div>
+    </nav>
 
-
-  <footer>
-    <div id="mc_embed_signup" class="subscribe-container">
-      <form
-        action="//emptysqua.us13.list-manage.com/subscribe/post?u=14757551c5c9265970447577a&amp;id=aec18241e4"
-        method="post" id="mc-embedded-subscribe-form"
-        name="mc-embedded-subscribe-form" class="validate" target="_blank"
-        novalidate>
-        <div id="mc_embed_signup_scroll">
-          <div class="subscribe-label-container">
-            <label for="mce-EMAIL" class="subscribe-label">Get new articles by
-              email:</label>
+    <footer>
+      <div id="mc_embed_signup" class="subscribe-container">
+        <form
+          action="//emptysqua.us13.list-manage.com/subscribe/post?u=14757551c5c9265970447577a&amp;id=aec18241e4"
+          method="post" id="mc-embedded-subscribe-form"
+          name="mc-embedded-subscribe-form" class="validate" target="_blank"
+          novalidate>
+          <div id="mc_embed_signup_scroll">
+            <div class="subscribe-label-container">
+              <label for="mce-EMAIL" class="subscribe-label">Get new articles by
+                email:</label>
+            </div>
+            <div class="subscribe-input-container">
+              <input type="email" value="" name="EMAIL"
+                     class="email subscribe-input" id="mce-EMAIL"
+                     placeholder="email address" required>
+            </div>
+            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div style="position: absolute; left: -5000px;" aria-hidden="true">
+              <input type="text" name="b_14757551c5c9265970447577a_aec18241e4"
+                     tabindex="-1" value=""></div>
+            <div class="subscribe-button-container">
+              <input type="submit" value="Subscribe"
+                     name="subscribe" id="mc-embedded-subscribe"
+                     class="button subscribe-button">
+            </div>
           </div>
-          <div class="subscribe-input-container">
-            <input type="email" value="" name="EMAIL"
-                   class="email subscribe-input" id="mce-EMAIL"
-                   placeholder="email address" required>
-          </div>
-          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-          <div style="position: absolute; left: -5000px;" aria-hidden="true">
-            <input type="text" name="b_14757551c5c9265970447577a_aec18241e4"
-                   tabindex="-1" value=""></div>
-          <div class="subscribe-button-container">
-            <input type="submit" value="Subscribe"
-                   name="subscribe" id="mc-embedded-subscribe"
-                   class="button subscribe-button">
-          </div>
-        </div>
-      </form>
-    </div>
-  </footer>
-  <!--End mc_embed_signup-->
+        </form>
+      </div>
+    </footer>
+    <!--End mc_embed_signup-->
 
-  {{ template "_internal/disqus.html" . }}
+    {{ template "_internal/disqus.html" . }}
 
-  {{ end }}<!-- if eq .Type "post" -->
-  {{ if .Params.enable_lightbox }}
+    {{ end }}<!-- if eq .Type "post" -->
+    {{ if .Params.enable_lightbox }}
     <link rel="stylesheet" href="/static/lightbox.css">
     <script src="/static/js/lightbox.min.js" type="text/javascript"></script>
-    <script src="/static/js/lightbox.emptysquare.js" type="text/javascript"></script>
-  {{ end }}
+    <script src="/static/js/lightbox.emptysquare.js"
+            type="text/javascript"></script>
+    {{ end }}
 
-    </section>
-  </div>
+  </section>
+</div>
 {{ end }}
