--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/tag_or_category.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/tag_or_category.html
@@ -1,43 +1,48 @@
-  <div class="container">
+<div class="container">
 
-    <header class="main-header"><a href="{{ .content.Site.BaseURL }}" class="logo"></a>
-      <h1><a href="{{ .content.Site.BaseURL }}">{{ .content.Site.Title }}</a>
-      </h1>
+  <header class="main-header"><a href="{{ .content.Site.BaseURL }}"
+                                 class="logo"></a>
+    <h1><a href="{{ .content.Site.BaseURL }}">{{ .content.Site.Title }}</a>
+    </h1>
 
-{{ partial "sidebar.html" .content }}
-    </header>
+    {{ partial "sidebar.html" .content }}
+  </header>
   <section>
 
-  <header>
-    <h1 class="title page-title">
-      {{ with .taxonomy_type }}
-        {{ . }}:
+    <header>
+      <h1 class="title page-title">
+        {{ with .taxonomy_type }}
+          {{ . }}:
+        {{ end }}
+        {{ .taxonomy_name }}
+      </h1>
+    </header>
+    <ul class="post-list">
+      {{ range .paginator.Pages }}
+        <li>{{ partial "blog_post_summary" . }}</li>
       {{ end }}
-      {{ .taxonomy_name }}
-    </h1>
-  </header>
-  <ul class="post-list">
-    {{ range .paginator.Pages }}
-      <li>{{ partial "blog_post_summary" . }}</li>
-    {{ end }}
-  </ul>
-  {{ if or (.paginator.HasPrev) (.paginator.HasNext) }}
-  <nav class="nav-below nav-with-current">
-    <div class="nav-previous">
-    {{ if .paginator.HasNext }}
-      <a href="{{ .URL | relURL }}page/{{ .paginator.Next.PageNumber }}"><span class="meta-nav">&larr;&nbsp;</span>Older</a>
-    {{ end }}
-    </div>
-    <div class="nav-current">
-      Page {{ .paginator.PageNumber }}
-    </div>
+    </ul>
+    {{ if or (.paginator.HasPrev) (.paginator.HasNext) }}
+    <nav class="nav-below nav-with-current">
+      <div class="nav-previous">
+        {{ if .paginator.HasNext }}
+          <a href="{{ .URL | relURL }}page/{{ .paginator.Next.PageNumber }}">
+            <span class="meta-nav">&larr;&nbsp;</span>Older
+          </a>
+        {{ end }}
+      </div>
+      <div class="nav-current">
+        Page {{ .paginator.PageNumber }}
+      </div>
 
-    <div class="nav-next">
-      {{ if .paginator.HasPrev }}
-        <a href="{{ .content.URL | relURL }}page/{{ .paginator.Prev.PageNumber }}">Newer<span class="meta-nav">&nbsp;&rarr;</span></a>
-      {{ end }}
-    </div>
-  </nav>
-  {{ end }}
+      <div class="nav-next">
+        {{ if .paginator.HasPrev }}
+          <a href="{{ .content.URL | relURL }}page/{{ .paginator.Prev.PageNumber }}">
+            Newer<span class="meta-nav">&nbsp;&rarr;</span>
+          </a>
+        {{ end }}
+      </div>
+    </nav>
+    {{ end }}
   </section>
-  </div>
+</div>
