--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/single.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/single.html
@@ -22,8 +22,8 @@
           </time>
           <span class="byline">
             <span class="sep">&nbsp;&mdash;&nbsp;</span>
-            <a href="https://twitter.com/{{ .Site.Params.TwitterHandle }}">
-              <span class="author">{{ .Site.Params.Author }}</span>
+            <a href="https://twitter.com/{{ .Site.Params.twitterhandle }}">
+              <span class="author">{{ .Site.Params.author }}</span>
             </a>
           </span>
         </div>
