--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/pagination.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/pagination.html
@@ -1,11 +1,11 @@
-{{ if or (.Paginator.HasPrev) (.Paginator.HasNext) }}
+{{ if or (.Paginator.PrevInSection) (.Paginator.NextInSection) }}
 <nav class="paging">
-  {{ if .Paginator.HasPrev }}
-  <a href="{{ .URL }}page/{{ .Paginator.Prev.PageNumber }}" class="left" rel="prev">PREV</a>
+  {{ if .Paginator.PrevInSection }}
+  <a href="{{ .URL }}page/{{ .Paginator.PrevInSection.PageNumber }}" class="left" rel="prev">PREV</a>
   {{ end }}
 
-  {{ if .Paginator.HasNext }}
-  <a href="{{ .URL }}page/{{ .Paginator.Next.PageNumber }}" class="right" rel="next">NEXT</a>
+  {{ if .Paginator.NextInSection }}
+  <a href="{{ .URL }}page/{{ .Paginator.NextInSection.PageNumber }}" class="right" rel="next">NEXT</a>
   {{ end }}
 </nav>
 {{ end }}
