--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/single.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/single.html
@@ -49,18 +49,20 @@
     </footer>
 
     {{ if eq .Type "post" }}
-    <nav class="nav-below">
-      <div class="nav-previous">
-        {{ if .PrevInSection }}
-        <a href="{{ .PrevInSection.Permalink }}"><span class="meta-nav">&larr;&nbsp;</span>{{ .PrevInSection.Title }}</a>
-        {{ end }}
-      </div>
-      <div class="nav-next">
-        {{ if .NextInSection }}
-        <a href="{{ .NextInSection.Permalink }}">{{ .NextInSection.Title }}<span class="meta-nav">&nbsp;&rarr;</span></a>
-        {{ end }}
-      </div>
-    </nav>
+      {{ if not .Draft }}
+        <nav class="nav-below">
+          <div class="nav-previous">
+            {{ if .PrevInSection }}
+            <a href="{{ .PrevInSection.Permalink }}"><span class="meta-nav">&larr;&nbsp;</span>{{ .PrevInSection.Title }}</a>
+            {{ end }}
+          </div>
+          <div class="nav-next">
+            {{ if .NextInSection }}
+            <a href="{{ .NextInSection.Permalink }}">{{ .NextInSection.Title }}<span class="meta-nav">&nbsp;&rarr;</span></a>
+            {{ end }}
+          </div>
+        </nav>
+      {{ end }}
 
       {{ if .Params.series }}
         <!-- assume this article is part of only one series -->
@@ -75,39 +77,39 @@
         {{ end }}
       {{ end }}
 
-    <footer>
-      <div id="mc_embed_signup" class="subscribe-container">
-        <form
-          action="//emptysqua.us13.list-manage.com/subscribe/post?u=14757551c5c9265970447577a&amp;id=aec18241e4"
-          method="post" id="mc-embedded-subscribe-form"
-          name="mc-embedded-subscribe-form" class="validate" target="_blank"
-          novalidate>
-          <div id="mc_embed_signup_scroll">
-            <div class="subscribe-label-container">
-              <label for="mce-EMAIL" class="subscribe-label">Get new articles by
-                email:</label>
+      <footer>
+        <div id="mc_embed_signup" class="subscribe-container">
+          <form
+            action="//emptysqua.us13.list-manage.com/subscribe/post?u=14757551c5c9265970447577a&amp;id=aec18241e4"
+            method="post" id="mc-embedded-subscribe-form"
+            name="mc-embedded-subscribe-form" class="validate" target="_blank"
+            novalidate>
+            <div id="mc_embed_signup_scroll">
+              <div class="subscribe-label-container">
+                <label for="mce-EMAIL" class="subscribe-label">Get new articles by
+                  email:</label>
+              </div>
+              <div class="subscribe-input-container">
+                <input type="email" value="" name="EMAIL"
+                       class="email subscribe-input" id="mce-EMAIL"
+                       placeholder="email address" required>
+              </div>
+              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                <input type="text" name="b_14757551c5c9265970447577a_aec18241e4"
+                       tabindex="-1" value=""></div>
+              <div class="subscribe-button-container">
+                <input type="submit" value="Subscribe"
+                       name="subscribe" id="mc-embedded-subscribe"
+                       class="button subscribe-button">
+              </div>
             </div>
-            <div class="subscribe-input-container">
-              <input type="email" value="" name="EMAIL"
-                     class="email subscribe-input" id="mce-EMAIL"
-                     placeholder="email address" required>
-            </div>
-            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div style="position: absolute; left: -5000px;" aria-hidden="true">
-              <input type="text" name="b_14757551c5c9265970447577a_aec18241e4"
-                     tabindex="-1" value=""></div>
-            <div class="subscribe-button-container">
-              <input type="submit" value="Subscribe"
-                     name="subscribe" id="mc-embedded-subscribe"
-                     class="button subscribe-button">
-            </div>
-          </div>
-        </form>
-      </div>
-    </footer>
-    <!--End mc_embed_signup-->
+          </form>
+        </div>
+      </footer>
+      <!--End mc_embed_signup-->
 
-    {{ template "_internal/disqus.html" . }}
+      {{ template "_internal/disqus.html" . }}
 
     {{ end }}<!-- if eq .Type "post" -->
     {{ if .Params.enable_lightbox }}
