don't display date on drafts

--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/single.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/single.html
@@ -17,9 +17,13 @@
       <header>
         {{ if eq .Type "post" }}
         <div class="post-meta">
-          <time class="post-time">
-            {{ .Date.Format "January 2, 2006" }}
-          </time>
+          {{ if .Date.IsZero }}
+            Draft
+          {{ else }}
+            <time class="post-time">
+              {{ .Date.Format "January 2, 2006" }}
+            </time>
+          {{ end }}
           <span class="byline">
             <span class="sep">&nbsp;&mdash;&nbsp;</span>
             <a href="https://twitter.com/{{ .Site.Params.twitterhandle }}">
