set thumbnail heights
Requires Hugo version including a 2016-12-25 bug fix:

https://github.com/spf13/hugo/issues/2806

--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/blog_post_summary.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/blog_post_summary.html
@@ -1,8 +1,19 @@
+{{ $path := .File.BaseFileName -}}
+
 <a href="{{ .URL }}" class="summary-title">{{ .Title }}</a>
 <a href="{{ .URL }}">
     {{ $post := . -}}
     {{ with .Params.thumbnail -}}
-      <img class="thumbnail" width="120" src="{{ $post.URL }}{{ replace . "." "@240." }}">
+      {{ $thumbnail := replace . "." "@240." }}
+      {{ with printf "content/%s/%s" $path $thumbnail | imageConfig }}
+        {{ if (and .Width .Height) }}
+        {{ $thumbnail_height := div (mul 120 .Height) .Width }}
+        <img class="thumbnail" width="120" src="{{ $post.URL }}{{ $thumbnail }}" height="{{ $thumbnail_height }}">
+        {{ else }}
+        <img class="thumbnail" width="120" src="{{ $post.URL }}{{ $thumbnail }}">
+        {{ end }}
+
+      {{ end -}}
     {{ end -}}
     <span class="excerpt">{{ .Description }}</span>
 </a>
