fix thumbnail paths with many dots
In a path like "a.b.png", generate a thumbnail by replacing the final
dot with "@240.", like "a.b@240.png", not by replacing all dots, like
"a@240.b@240.png".

--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/blog_post_summary.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/blog_post_summary.html
@@ -4,7 +4,7 @@
 <a href="{{ .URL }}">
     {{ $post := . -}}
     {{ with .Params.thumbnail -}}
-      {{ $thumbnail := replace . "." "@240." }}
+      {{ $thumbnail := replaceRE "(.*)\\.([^.]+)$" "$1@240.$2" . }}
       {{ with printf "content/%s/%s" $path $thumbnail | imageConfig }}
         {{ if (and .Width .Height) }}
         {{ $thumbnail_height := div (mul 120 .Height) .Width }}
