--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/baseof.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/baseof.html
@@ -16,9 +16,9 @@
         rel="stylesheet">
   <link rel="stylesheet" href="{{ "/static/blog.css" | relURL }}">
   <link rel="shortcut icon" href="{{ "/static/favicon.gif" | relURL }}">
-  <link href="{{ .RSSlink }}" rel="alternate" type="application/rss+xml"
+  <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml"
         title="{{ .Site.Title }}"/>
-  <link href="{{ .RSSlink }}" rel="feed" type="application/rss+xml"
+  <link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml"
         title="{{ .Site.Title }}"/>
   <meta name="author" content="A. Jesse Jiryu Davis">
 </head>
