--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/taxonomy/tag.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/taxonomy/tag.html
@@ -1,5 +1,9 @@
 {{ define "title" }}{{ .Site.Title }} | {{ .Title | lower }}{{ end }}
 
+{{ define "extrahead" -}}
+<meta class="swiftype" name="popularity" data-type="integer" content="0" />
+{{ end }}
+
 {{ define "body" }}
   {{ $taxonomy_title := .Title | lower }}
   {{ $paginator := .Paginate (where .Data.Pages "Type" "post") }}
