delete references to Lektor

--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/baseof.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/_default/baseof.html
@@ -6,7 +6,7 @@
   <title>{{ block "title" . }}{{ .Title }}{{ end }}</title>
   {{ block "extrahead" . }}{{ end -}}
   <meta name="description" content="{{ .Description }}">
-  <meta name="generator" content="Lektor">
+  <meta name="generator" content="Hugo">
   <meta name="twitter:title" content="{{ .Title }}">
   <meta name="twitter:description" content="{{ .Description }}">
   <meta name="twitter:site" content="@jessejiryudavis">
