--- a/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/sidebar.html
+++ b/emptysquare/themes/hugo_theme_emptysquare/layouts/partials/sidebar.html
@@ -9,8 +9,7 @@
       <li class="nav-item nav-divider nav-divider-2">&nbsp;</li>
       <li class="nav-item search-item">
         <form class="search-form">
-          <!-- "st-default-search-input" enables Swiftype search -->
-          <input type="text" name="q" value="" id="search-input" class="search-text-input st-default-search-input"/>
+          <input type="text" name="q" value="" id="search-input" class="search-text-input"/>
           <input type="submit" value="search" id="search-submit" class="button search-button"/>
         </form>
       </li>
